# medichain

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Cargo.toml  DEMO_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  POSTGRES_SETUP.md  README.md  SEED_DATA_CLEANUP_SUMMARY.md  SERVER_STARTUP.md  clippy.toml  deny.toml  docker-compose.jitsi.yml  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml  quick-start.bat  run-api.bat  run.bat  rust-toolchain.toml  start-api-bg.bat  start-server.ps1  start-server.sh
.cargo/: config.toml
api/: Cargo.toml  Dockerfile  README.md
api/data/: demo_users.json
api/migrations/: 20240121000001_initial_schema.sql  20260123000001_phase1_clinical_tables.sql  20260123000002_phase2_clinical_documentation.sql  20260123000003_phase3_lab_surgical_pharmacy.sql  20260123000004_phase4_specialty_admin_ems.sql  20260123000005_phase7_wearables_telehealth_cds_insurance.sql  20260123000006_phase11_family_imm_death_sync_audit.sql  20260126000001_demo_patients.sql  20260324000001_fix_audit_columns.sql  20260419000001_communication_features.sql  20260601000001_phase7_new_domains.sql  20260601000002_phase7_wearables_telehealth.sql  20260601000003_phase7_shape_mismatch.sql  20260601000004_phase8_soap_notes.sql  20260601000005_patients_profile_extras.sql  20260603000001_phase11_security.sql  20260609000001_dnr_verification_and_currency.sql  20260610000001_emergency_protocol_persistence.sql  20260623000000_add_data_to_missed_tables.sql  20260623000001_sms_opt_out.sql  20260623000002_cds_thresholds_audit.sql
api/migrations/init/: 00_init.sql
api/src/: api_tests.rs  blockchain.rs  clinical.rs  clinical_endpoints.rs  ipfs.rs  main.rs  national_id.rs  nfc_simulator.rs  notifications.rs  pagination.rs  pdf.rs  property_tests.rs  routes.rs  startup.rs  state.rs  support.rs  telehealth.rs  websocket.rs
api/src/clinical_endpoints/: assessment.rs  billing.rs  clinical_support.rs  emergency.rs  emergency_access.rs  engagement.rs  fhir.rs  insurance_pharmacy.rs  lab.rs  medical_id.rs  mod.rs  physician.rs  platform.rs  surgical.rs  workflow.rs
api/src/clinical_endpoints/emergency/: assessments.rs  crisis.rs  management.rs  mod.rs
api/src/clinical_endpoints/engagement/: appointments.rs  family.rs  mod.rs  symptoms.rs  wearables.rs
api/src/clinical_endpoints/platform/: analytics.rs  localization.rs  mod.rs  registries.rs  sync.rs
api/src/clinical_endpoints/surgical/: diagnostics.rs  mod.rs  perioperative.rs  public_health.rs
api/src/clinical_endpoints/workflow/: compliance.rs  dashboards.rs  messaging.rs  mod.rs  orders.rs  tasks.rs
api/src/db/: mod.rs
api/src/handlers/: access_logs.rs  auth_challenge.rs  auth_jwt.rs  cds_admin.rs  demo.rs  gcs.rs  general.rs  insurance_cards.rs  ipfs_records.rs  lab.rs  lab_panels.rs  mod.rs  national_id.rs  nfc.rs  patient_admin.rs  pdf_export.rs  rbac.rs  sample.rs  session.rs  soap.rs  triage.rs  vitals.rs  wallet_auth.rs
api/src/middleware/: encryption_policy.rs  error_handling.rs  idempotency.rs  metrics.rs  mod.rs  rate_limit.rs  security_headers.rs  signature_auth.rs  versioning.rs
api/src/models/: mod.rs  user.rs
api/src/repositories/: mod.rs  traits.rs
api/src/repositories/memory/: access_log.rs  allergy.rs  consultation_note.rs  emergency.rs  fall_risk_assessment.rs  gcs_assessment.rs  history_physical.rs  io_record.rs  iv_assessment.rs  medical_record.rs  medication_record.rs  mod.rs  nfc_tag.rs  nursing_care_plan.rs  patient.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  progress_note.rs  sample_history.rs  triage.rs  vital_signs.rs  wound_assessment.rs  wound_iv_assessments.rs
api/src/repositories/postgres/: access_log.rs  allergy.rs  consultation_note.rs  emergency.rs  fall_risk_assessment.rs  gcs_assessment.rs  history_physical.rs  io_record.rs  iv_assessment.rs  medical_record.rs  medication_record.rs  mod.rs  nfc_tag.rs  nursing_care_plan.rs  patient.rs  phase2.rs  phase3_lab.rs  phase3_other.rs  phase3_surgical.rs  phase4_admin.rs  phase4_ems.rs  phase4_specialty.rs  phase5_cds.rs  phase5_communication.rs  phase5_insurance.rs  phase5_telehealth.rs  phase5_wearables.rs  phase6_audit.rs  phase6_death.rs  phase6_family.rs  phase6_immunization.rs  phase6_sync.rs  phase7.rs  progress_note.rs  sample_history.rs  tests.rs  triage.rs  vital_signs.rs  wound_assessment.rs
api/src/security/: breach.rs  jwt.rs  mfa.rs  mod.rs
api/src/services/: mod.rs  transcription.rs  user_service.rs
api/src/types/: auth.rs  conversions.rs  domain.rs  lab.rs  mod.rs  records.rs  requests.rs
client/: .lighthouserc.json  README.md  package-lock.json  package.json  playwright.config.ts
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: API_OPTIMIZATION_GUIDE.md  AUDIT_LOG.md  DATABASE_SCHEMA.md  DEV_AUTH.md  FEATURE_COMPLETENESS_AUDIT.md  FRONTEND_IMPLEMENTATION_TASKS.md  HYBRID_ARCHITECTURE_RESEARCH.md  INCIDENT_RESPONSE.md  NEXT_WEEK_TODO.md  PENDING_TASKS.md  PERFORMANCE_BUDGETS.md  PRESENTATION_ONE_PAGER.md  PRODUCTION_READINESS.md  PR_SUMMARY.md  SECRETS_MANAGEMENT.md  SETUP_AND_RUNNING.md  SKILL.md  SKILL2.md  SKILL3.md  SKILL4.md  SKILL5.md  SKILL6.md  SKILL7.md  SKILL9.md  SMTP_SETUP.md  TLS.md  api.md  architecture.md  database-schema.md  e2ee-policy.md  frontend-backend-crossref.csv  frontend-backend-mapping.csv  jitsi-deployment.md  medical-id-research.md  medichain-comprehensive-research.md  medichain-dev-guide.md  medichain-security-deep-dive.md  medichain_master_plan.md  mobile-setup.md  monitoring.md  (+5 more)
mobile-examples/: README.md
nginx/: default.conf  default.prod.conf
node/: Cargo.toml
node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
pallets/: README.md
pallets/access-control/: Cargo.toml
pallets/access-control/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/medical-records/: Cargo.toml
pallets/medical-records/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
scripts/: create-demo-users.ps1  create-demo-users.sh  crossref_endpoints.py  demo-api-test.ps1  repo_inventory.py  (+9 more)
(+375 files in other folders)
