[package]
name = "pallet-medical-records"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
pallet-access-control = { path = "../access-control", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"sp-std/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"pallet-access-control/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-access-control/runtime-benchmarks",
]

[lib]
name = "pallet_medical_records"
path = "src/lib.rs"
crate-type = ["lib"]
